samples/_failures_safe/1761454415_4d18e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f78456f.c: In function ‘main’:
./samples/SAFE/__tmp_6f78456f.c:134:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  134 |     Matrix a, b
      |     ^~~~~~
./samples/SAFE/__tmp_6f78456f.c:134:5: error: expected declaration or statement at end of input
